# sq3-rs

./: Cargo.toml  README.md
.cargo/: config.toml
crates/sq3-rs/: Cargo.toml  build.rs
crates/sq3-rs/src/: file_header.rs  helpers.rs  io.rs  lib.rs  macros.rs  query.rs  result.rs  runtime.rs  traits.rs
crates/sq3-rs/src/file_header/: application_id.rs  database_text_encoding.rs  db_filesize_in_pages.rs  file_change_counter.rs  file_format_version_numbers.rs  freelist_pages.rs  incremental_vacuum_settings.rs  magic_header_string.rs  page_size.rs  payload_fractions.rs  reserved_bytes_per_page.rs  reserved_for_expansion.rs  schema_cookie.rs  schema_format.rs  suggested_cache_size.rs  user_version.rs  version_valid_for.rs  write_library_version.rs
crates/sq3-rs/src/query/: delete.rs  explain.rs  expression.rs  insert.rs  keyword.rs  keywords.rs  literal_value.rs  router.rs  select.rs  stmt.rs  tests.rs  traits.rs  update.rs  white_space.rs
crates/sq3-rs/src/query/expression/: digits.rs  hex_digits.rs  operators.rs
crates/sq3-rs/src/query/expression/operators/: tests.rs
crates/sq3-rs/src/query/keyword/: abort.rs  action.rs  add.rs  all.rs  alter.rs  analyze.rs  as_.rs  asc.rs  autoincrement.rs  case.rs  check.rs  collate.rs  constraint.rs  current_date.rs  current_timestamp.rs  database.rs  default.rs  deferrable.rs  deferred.rs  delete.rs  detach.rs  distinct.rs  do_.rs  drop.rs  except.rs  exclude.rs  filter.rs  first.rs  following.rs  from.rs  full.rs  generated.rs  glob.rs  groups.rs  having.rs  if_.rs  ignore.rs  immediate.rs  inner.rs  intersect.rs  (+32 more)
crates/sq3-rs/src/query/keyword/tests/: mod.rs
crates/sq3-rs/src/query/keywords/: abort.rs  action.rs  add.rs  after.rs  all.rs  alter.rs  always.rs  analyze.rs  and.rs  as_.rs  asc.rs  attach.rs  autoincrement.rs  before.rs  begin.rs  between.rs  by.rs  cascade.rs  case.rs  cast.rs  check.rs  collate.rs  column.rs  commit.rs  conflict.rs  constraint.rs  create.rs  cross.rs  current.rs  current_date.rs  current_time.rs  current_timestamp.rs  database.rs  default.rs  deferrable.rs  deferred.rs  delete.rs  desc.rs  detach.rs  distinct.rs  (+107 more)
crates/sq3-rs/src/query/keywords/tests/: mod.rs
crates/sq3-rs/src/query/literal_value/: digits.rs  hex_digits.rs  parser.rs  traits.rs
crates/sq3-rs/src/query/literal_value/digits/: tests.rs
crates/sq3-rs/src/query/literal_value/hex_digits/: tests.rs
crates/sq3-rs/src/query/select/: tests.rs
crates/sq3-rs/src/query/stmt/: delete.rs  insert.rs  select.rs  update.rs
crates/sq3-rs/src/query/stmt/select/: parser.rs  tests.rs
crates/sq3-rs/src/query/stmt/select/parser/: result_column.rs  tests.rs
crates/sq3-rs/src/query/tests/: fuzzing.rs  query.rs
crates/sq3-rs/src/runtime/: pager.rs
crates/sq3_derive/: Cargo.toml
crates/sq3_derive/src/: lib.rs
crates/sq3_parser/: Cargo.toml  build.rs
crates/sq3_parser/src/: explain.rs  helpers.rs  keyword.rs  lib.rs  result.rs  router.rs  stmt.rs  tests.rs  traits.rs  white_space.rs
crates/sq3_parser/src/expression/: operators.rs
crates/sq3_parser/src/expression/operators/: tests.rs
crates/sq3_parser/src/keyword/: abort.rs  action.rs  add.rs  after.rs  all.rs  alter.rs  always.rs  analyze.rs  and.rs  as_.rs  asc.rs  attach.rs  autoincrement.rs  before.rs  begin.rs  between.rs  by.rs  cascade.rs  case.rs  cast.rs  check.rs  collate.rs  column.rs  commit.rs  conflict.rs  constraint.rs  create.rs  cross.rs  current.rs  current_date.rs  current_time.rs  current_timestamp.rs  database.rs  default.rs  deferrable.rs  deferred.rs  delete.rs  desc.rs  detach.rs  distinct.rs  (+107 more)
crates/sq3_parser/src/keyword/tests/: mod.rs
crates/sq3_parser/src/literal_value/: parser.rs
crates/sq3_parser/src/literal_value/parser/: tests.rs
crates/sq3_parser/src/stmt/: delete.rs  insert.rs  select.rs  update.rs
crates/sq3_parser/src/stmt/select/: parser.rs  tests.rs
crates/sq3_parser/src/stmt/select/parser/: result_column.rs  tests.rs
crates/sq3_parser/src/tests/: fuzzing.rs  query.rs
misc/code-generator/code/: statements-keywords.txt
misc/code-generator/src/: main.rs
src/: file_header.rs  io.rs  lib.rs  macros.rs  main.rs  query.rs  result.rs  runtime.rs  traits.rs
src/file_header/: file_change_counter.rs  file_format_version_numbers.rs  freelist_pages.rs  page_size.rs  schema_format.rs  write_library_version.rs
src/query/: expression.rs  keywords.rs  select.rs  traits.rs
src/query/keywords/: abort.rs  action.rs  add.rs  after.rs  all.rs  alter.rs  always.rs  analyze.rs  and.rs  as_.rs  asc.rs  attach.rs  autoincrement.rs  before.rs  begin.rs  between.rs  by.rs  cascade.rs  case.rs  cast.rs  check.rs  collate.rs  column.rs  commit.rs  conflict.rs  constraint.rs  create.rs  cross.rs  current.rs  current_date.rs  current_time.rs  current_timestamp.rs  database.rs  default.rs  deferrable.rs  deferred.rs  delete.rs  desc.rs  (+109 more)
src/runtime/: pager.rs
tests/: sqlite_connection.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  helpers.rs  main.rs  tasks.rs
xtask/src/tasks/: build.rs  dist.rs  fuzzer.rs  help.rs
(+2 files in other folders)
