[workspace]
members = ["crates/*", "misc/*"]
resolver = "2"
exclude = ["misc/*"]

[workspace.package]
edition = "2021"
rust-version = "1.80.0"
version = "0.2.7"
description = "SQLite reader with no dependencies"
readme = "README.md"
keywords = ["sqlite", "database"]
license = "MIT"
repository = "https://github.com/ancos2505/sq3-rs"


[profile.bench]
opt-level = 3
lto = true
debug = 0
debug-assertions = false

[profile.dev]
opt-level = 0
lto = false
debug = 2
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
debug = 0
debug-assertions = false
strip = true

[profile.test]
opt-level = 0
lto = false
debug = 2
debug-assertions = true
