[package]
name = "sq3-rs"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sq3_derive = { version = "0.2", path = "../sq3_derive" }

[features]
default = ["log"]
log = []
fuzzer = []
