[package]
name = "sq3_parser"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[features]
defaulft = ["log"]
fuzzer = []
log = []

[dependencies]
sq3_derive = { version = "0.3", path = "../sq3_derive" }
